# vMF-Contact

./: .gitignore  Dockerfile  README.md  compose.yaml  install.sh  package.xml  read_data.py  requirements.txt  run_docker.sh  setup.py
active_grasp/: __init__.py  bbox.py  (+4 more)
vmf_contact_main/: .gitignore  README.md  __init__.py  config.yaml  package.xml  pcd.npy  pointcloud_subscriber_node.py  remote_agent.py  run_slurm.sh  setup.cfg  setup.py  train.py
vmf_contact_main/active_grasp/: __init__.py  nbv.py  perception.py  spatial.py  vlm.py
vmf_contact_main/cfgs/vmfcontact/: pointnext-b.yaml  pointnext-l.yaml  pointnext-s.yaml  spotr.yaml
vmf_contact_main/openpoints/cpp/chamfer_dist/: test.py
vmf_contact_main/robot_grasping.egg-info/: entry_points.txt  top_level.txt
vmf_contact_main/ros2_nodes/: inference_node_base.py  inference_node_vlm.py  inference_node_vmf.py  utils_node.py
vmf_contact_main/slurm/: run_slurm_pointnext_s.sh  run_slurm_spotr.sh
vmf_contact_main/vmf_contact/datasets/: __init__.py  dataset.py
vmf_contact_main/vmf_contact/metrics/: __init__.py
vmf_contact_main/vmf_contact/model/: estimator.py  grasp_buffer.py  lightning_module.py  lightning_module_flow.py  utils.py
vmf_contact_main/vmf_contact/nn/: __init__.py  attention.py  loss.py  network.py  pointr.py  position_encodings.py  scaler.py  uncertainty_estimator.py  unet.py  util.py
vmf_contact_main/vmf_contact_main/: config.yaml  requirements.txt  train.py  vis.py
vmf_contact_main/vmf_contact_main/active_grasp/: policy.py
vmf_contact_main/vmf_contact_main/vmf_contact/: __init__.py
(+67 files in other folders)
