<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_grasping</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="edgar.welte@kit.edu">edgar</maintainer>
  <license>Apache-2.0</license>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>sensor_msgs_py</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_py</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
